name: opardum
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2010 Liam O'Connor-Davis
maintainer: liamoc@cse.unsw.edu.au
stability: Experimental
homepage: http://liamoc.net/opardum
package-url:
bug-reports:
synopsis: A configurable collaborative editing server.
description: A highly configurable, operational transforms based collaborative document editing server
category: Network
author: Liam O'Connor-Davis
tested-with: GHC==6.12
library
   build-depends: base >=4.0, containers >=0.3.0,
                  json >=0.4.3, mtl -any, network >=2.0, bytestring >=0.9, nano-md5 >= 0.1, cereal >= 0.3
   exposed-modules: Opardum.Server Opardum.ConcurrencyControl
                  Opardum.Storage Opardum.Processes
                  Opardum.OperationalTransforms Opardum.Websockets
                  Opardum.ClientRegistry Opardum.Transport
                  Opardum.ClientThreads Opardum.Archiver
                  Opardum.Server.Types Opardum.DocumentManager.Types
                  Opardum.DocumentManager
                  Opardum.Storage.NullStorage, Opardum.Configuration               
   ghc-options: -Wall 

executable opardum
   main-is: Main.lhs
   ghc-options: -Wall 
   buildable: True
   build-depends: base >=4.0, containers >=0.3.0, dyre >=0.8,
                  json >=0.4.3, mtl -any, network >=2.0, bytestring >= 0.9, nano-md5 >= 0.1, cereal >= 0.3
   other-modules: Opardum.Server Opardum.ConcurrencyControl
                  Opardum.Storage Opardum.Processes
                  Opardum.OperationalTransforms Opardum.Websockets
                  Opardum.ClientRegistry Opardum.Transport
                  Opardum.ClientThreads Opardum.Archiver
                  Opardum.Server.Types Opardum.DocumentManager.Types
                  Opardum.DocumentManager
                  Opardum.Storage.NullStorage, Opardum.Configuration
